Filter scrollbar now draggable - Fixes #23

--- a/ui/src/static/css/Filters.css
+++ b/ui/src/static/css/Filters.css
@@ -18,7 +18,6 @@
   cursor: move;
   left: 10px;
   opacity: 0;
-  transition: 200ms;
 }
 .Filters:hover .scrollbar {
   opacity: 1;
